--- a/packages/components/src/components/form/co-form.styles.css
+++ b/packages/components/src/components/form/co-form.styles.css
@@ -59,5 +59,6 @@
 ::slotted(form) {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   gap: var(--co-space-4);
 }
